# ComfyUI-MiniCPM

./: AILab_MiniCPM.py  AILab_MiniCPM_GGUF.py  MiniCPM_v4VSv45_Image_Details.json  MiniCPM_v4VSv45_image.json  README.md  README_CN.md  __init__.py  llama_cpp_install.md  llama_cpp_install.py  minicpm_config.json  pyproject.toml  requirements.txt  update.md
example_workflows/: MiniCPM-V-4-GGUF.json  MiniCPM-V-4.json  MiniCPM-V-4_batchImages.json  MiniCPM-V-4_video.json  MiniCPM_v4VSv45.json  Thumbs.db
llama_cpp_install/: llama_cpp_install_zh.md
locales/en/: main.json  nodeDefs.json
locales/fr/: nodeDefs.json
locales/ja/: nodeDefs.json
locales/ko/: nodeDefs.json
locales/ru/: nodeDefs.json
locales/zh/: nodeDefs.json
