[project]
name = "ComfyUI-MiniCPM"
description = "A ComfyUI custom node for MiniCPM vision-language models, enabling high-quality image captioning and analysis."
version = "1.0.0"
license = {file = "LICENSE"}

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "torchvision>=0.15.0",
    "Pillow>=9.0.0",
    "huggingface-hub>=0.16.0",
    "numpy>=1.21.0",
    "accelerate>=0.20.0"
]

[project.optional-dependencies]
gguf = ["llama-cpp-python>=0.2.0"]
    
[project.urls]
Repository = "https://github.com/1038lab/ComfyUI-MiniCPM"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ailab"
DisplayName = "ComfyUI-MiniCPM"
Icon = ""